vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr_block
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = merge(
    var.tags,
    {
      Name = format("%s-vpc", var.vpc_name)
    }
  )
  lifecycle {
    prevent_destroy = true
  }
}
